Bug 117629 - Fontwork shape is not saved
Summary: Fontwork shape is not saved
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
6.1.0.0.alpha1+
Hardware: x86-64 (AMD64) Windows (All)
: medium normal
Assignee: Armin Le Grand (collabora)
URL:
Whiteboard: target:6.1.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Regressions-AW080
  Show dependency treegraph
 
Reported: 2018-05-15 20:59 UTC by Regina Henschel
Modified: 2024-02-01 07:07 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Regina Henschel 2018-05-15 20:59:08 UTC
Start Writer.
Insert a fontwork shape from the fontwork gallery. I have used No6.
Save.
Reload.

Notice the fontwork shape is missing.

I see the error in Version: 6.1.0.0.alpha1+ (x64)
Build ID: ea33ae5ef0a9d6b03fdef6503066100d0ae12729
CPU threads: 8; OS: Windows 10.0; UI render: default; 
TinderBox: Win-x86_64@62-TDF, Branch:master, Time: 2018-05-03_14:09:58
Locale: de-DE (de_DE); Calc: CL

It is OK in Version: 6.0.4.2 (x64)
Build ID: 9b0d9b32d5dcda91d2f1a96dc04c645c450872bf
CPU threads: 8; OS: Windows 10.0; UI render: default; 
Locale: de-DE (de_DE); Calc: CL
Comment 1 raal 2018-05-16 14:13:16 UTC
This seems to have begun at the below commit.
Adding Cc: to Armin Le Grand ; Could you possibly take a look at this one? Thanks
 c413eba35cfe9076054dfde2b3c0d895183039b8 is the first bad commit
commit c413eba35cfe9076054dfde2b3c0d895183039b8
Author: Norbert Thiebaud <nthiebaud@gmail.com>
Date:   Sat Apr 7 00:54:40 2018 -0700

    source dfefe448c41921f2f1e54d3f69b8b9e89031d055

    author    Armin Le Grand <Armin.Le.Grand@cib.de (CIB)>    2018-03-01 15:54:32 +0100
committer    Armin Le Grand <Armin.Le.Grand@cib.de>    2018-04-07 00:28:30 +0200
commit    dfefe448c41921f2f1e54d3f69b8b9e89031d055 (patch)
tree    1aace31054b5740e2faffcbc5de66a791be27f7d
parent    eba4d5b2b76cefde90cb3d6638c736f435023a45 (diff)
SOSAW080: Added first bunch of basic changes to helpers
Comment 2 Armin Le Grand (collabora) 2018-05-23 12:34:59 UTC
Checked, happens as described. STrange, normal shapes work and import (saved from other version) is fine...
Comment 3 Armin Le Grand (collabora) 2018-05-23 12:45:13 UTC
Very strange...
- Create with LO60, add FW
- Load with master -> all good
- Change FW, save, reload -> all good
- new FW (keep or delete old), reload -> only old there new lost
-> Save FW works, but only for FW loaded with the document...
Comment 4 Armin Le Grand (collabora) 2018-05-23 16:06:51 UTC
You will not believe what happens internally here and what is the reason for this, check the comment for the bugfix checkin for hints. Just so much: Does already nl longer happen with my next SOSAW080-changes which I am working on. VERY complicated stuff including multiple Models, Pages, UNO API stuff and the export filters...
Comment 5 Armin Le Grand (collabora) 2018-05-23 16:17:00 UTC
Proposed fix on gerrit (see https://gerrit.libreoffice.org/#/c/54722/)
Comment 6 Armin Le Grand (collabora) 2018-05-23 21:24:55 UTC
Fix in master
Comment 7 Commit Notification 2018-05-23 21:25:38 UTC
Armin Le Grand committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=d541c4548fdc1835cf4fc020dbaa7ed7c2f734d0

tdf#117629 Fix FontWork UNO API/SdrPage settings

It will be available in 6.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Armin Le Grand (collabora) 2018-05-24 09:14:05 UTC
Re-checked in current master, looks good
Comment 9 Commit Notification 2018-05-25 11:00:47 UTC
Armin Le Grand committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=726d7e7b8b50dca9914329dbfd9491f7c8961f68

tdf#117629: Remove again after next step of SOSAW080 is done

It will be available in 6.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 Armin Le Grand (collabora) 2018-05-26 18:22:52 UTC
So this is now in the 6.1 branch as it needs to be.
Just a short note: Had to remove this again immediately in master when I added my next change for aw080 stuff (as described in the comment in the code)
Comment 11 Xisco Faulí 2018-05-29 13:13:40 UTC
Verified in

Version: 6.1.0.0.beta1+
Build ID: da49f4aeb8d5e9a7d2cba8855d911e7cc1d2f1e2
CPU threads: 4; OS: Linux 4.13; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); Calc: group

@Armin, Thanks for fixing this!!