tdf#117629 Fix FontWork UNO API/SdrPage settings

Change-Id: Id4da3ac2ff9f8bba382512cfafbca323d1002137